--- a/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
+++ b/themes/unc_charlotte4/css/unc_charlotte4.no-query.css
@@ -22,22 +22,8 @@ img, media {
   font-family: 'TradeGothicLTStd-Cn18';
   src: url("/sites/all/themes/unc_charlotte4/font/TradeGothicLTStd-Cn18.otf"); }
 
-/* base default styles */
-html body {
-  margin: 0 auto; }
-  html body .l-page {
-    overflow: hidden; }
-
-.l-region {
-  position: relative; }
-  .l-region.l-region--nav-sidebar {
-    padding-right: 20px; }
-    .l-region.l-region--nav-sidebar .block {
-      padding-bottom: 20px;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ccc; }
-      .l-region.l-region--nav-sidebar .block:last-child {
-        border-bottom: none; }
+html {
+  -webkit-font-smoothing: antialiased !important; }
 
 h1 {
   font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
@@ -78,8 +64,25 @@ p {
   font-family: arial;
   color: #444;
   font-size: 16px;
-  line-height: 22px;
+  line-height: 24px;
   margin: 10px 0; }
+
+/* base default styles */
+html body {
+  margin: 0 auto; }
+  html body .l-page {
+    overflow: hidden; }
+
+.l-region {
+  position: relative; }
+  .l-region.l-region--nav-sidebar {
+    padding-right: 20px; }
+    .l-region.l-region--nav-sidebar .block {
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #ccc; }
+      .l-region.l-region--nav-sidebar .block:last-child {
+        border-bottom: none; }
 
 .block {
   display: block;
@@ -492,7 +495,7 @@ body .field-collection-container {
   padding: 0 10px;
   margin: auto; }
   .l-content-header-meta .wrapper .breadcrumbs {
-    padding: 10px 5px;
+    padding: 15px 5px 10px 5px;
     margin: 0; }
     .l-content-header-meta .wrapper .breadcrumbs .breadcrumb {
       list-style-type: none;
@@ -504,9 +507,9 @@ body .field-collection-container {
         font-family: arial;
         color: #444;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 24px;
         padding: 0;
-        font-size: initial;
+        font-size: 14px;
         line-height: 16px; }
         .l-content-header-meta .wrapper .breadcrumbs .breadcrumb span.fa {
           color: #00703c; }
@@ -514,6 +517,7 @@ body .field-collection-container {
         display: block;
         float: left;
         width: 100%;
+        font-size: 14px;
         color: #00703c;
         border-bottom: 1px dotted #00703c;
         text-decoration: none; }
@@ -523,7 +527,7 @@ body .field-collection-container {
       font-family: arial;
       color: #444;
       font-size: 16px;
-      line-height: 22px;
+      line-height: 24px;
       font-size: 12px;
       line-height: 16px;
       display: block;
@@ -589,6 +593,7 @@ body .field-collection-container {
   .block.block--bean .bean-button-promo-1 {
     position: relative; }
     .block.block--bean .bean-button-promo-1 .field__item:after {
+      top: 44%;
       content: '\f04b';
       font-family: FontAwesome;
       font-size: 8px;
@@ -597,7 +602,6 @@ body .field-collection-container {
       top: calc(50% - 4px);
       right: 5px;
       color: #00703c;
-      top: calc(50% - 4px);
       color: white;
       right: 10px; }
     .block.block--bean .bean-button-promo-1 .field__item a {
@@ -631,7 +635,7 @@ body .field-collection-container {
         font-family: arial;
         color: #444;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 24px;
         display: block;
         float: left;
         width: 100%;
@@ -642,11 +646,11 @@ body .field-collection-container {
       font-family: arial;
       color: #444;
       font-size: 16px;
-      line-height: 22px;
+      line-height: 24px;
       padding-left: 30px; }
   .block.block--bean .bean-faq .content .field--name-field-read-more-link .field__item {
     position: relative;
-    float: right;
+    float: left;
     padding: 10px 20px; }
     .block.block--bean .bean-faq .content .field--name-field-read-more-link .field__item:after {
       content: '\f04b';
@@ -702,7 +706,7 @@ body .field-collection-container {
       font-family: arial;
       color: #444;
       font-size: 16px;
-      line-height: 22px;
+      line-height: 24px;
       display: block;
       float: left;
       width: 100%;
@@ -817,8 +821,8 @@ body .field-collection-container {
               filter: none \0/IE9;
               font-size: 16px;
               line-height: 18px;
-              font-size: 24px;
-              line-height: 28px; }
+              font-size: 30px;
+              line-height: 32px; }
               .block.block--bean .bean-showcase .showcase-elements .field__item .field--name-field-showcase-link .field__items .field__item a {
                 display: block;
                 float: left;
@@ -888,6 +892,7 @@ body .field-collection-container {
         height: 80px;
         width: 150px;
         height: 150px;
+        margin-top: 15px;
         border-radius: 50%;
         overflow: hidden; }
         .block.block--bean .bean-subsections > .content .field__item .field--name-field-subsection-image .field__items .field__item:first-child {
@@ -915,13 +920,15 @@ body .field-collection-container {
         font-family: arial;
         color: #444;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 24px;
         display: block;
         float: right;
         width: calc(100% - 80px);
+        padding: 10px 20px;
         float: left;
-        width: calc(100% - 150px);
-        padding: 10px 20px; }
+        width: calc(100% - 150px); }
+        .block.block--bean .bean-subsections > .content .field__item .field--name-field-subsection-intro .field__item {
+          margin-top: 10px; }
     .block.block--bean .bean-subsections > .content .field--name-field-promo-read-more .field__item {
       position: relative;
       padding-right: 20px; }
@@ -993,7 +1000,7 @@ body .field-collection-container {
         font-family: arial;
         color: #444;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 24px;
         color: #00703c;
         background: #eee;
         border: 1px solid #ccc;
@@ -1013,7 +1020,7 @@ body .field-collection-container {
           font-family: arial;
           color: #444;
           font-size: 16px;
-          line-height: 22px;
+          line-height: 24px;
           display: block;
           float: left;
           width: 100%;
@@ -1202,7 +1209,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
                 font-family: arial;
                 color: #444;
                 font-size: 13px;
-                line-height: 19px;
+                line-height: 21px;
                 margin: 0;
                 display: block;
                 float: left;
@@ -1231,7 +1238,8 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   width: 100%;
   padding: 20px 0 40px 0px;
   padding: 20px 20px 0 0px;
-  width: calc(100% - 300px); }
+  width: calc(100% - 300px);
+  width: calc(100% - 350px); }
   #block-bean-home-pride-of-niner-nation h2.block__title {
     font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
     font-weight: 400;
@@ -1268,9 +1276,10 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   display: block;
   float: left;
   width: 100%;
+  padding: 0 0 30px 0;
+  background: white;
   width: 300px;
-  padding: 0;
-  background: white; }
+  width: 350px; }
   #block-bean-home-support-the-band .block__content .content .header {
     display: block;
     float: left;
@@ -1297,7 +1306,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
       font-family: arial;
       color: #444;
       font-size: 16px;
-      line-height: 22px;
+      line-height: 24px;
       text-align: center;
       color: white;
       font-size: 16px;
@@ -1362,17 +1371,19 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
         font-family: arial;
         color: #444;
         font-size: 14px;
-        line-height: 20px;
-        color: #444; }
+        line-height: 22px;
+        color: #444;
+        margin: 0 0 5px 0; }
 
 #block-views-news-block-1 {
   display: block;
   float: left;
   width: 100%;
   padding: 20px 20px 0 0px;
-  background: url("/sites/all/themes/unc_charlotte4/img/0775-1935.png") no-repeat right bottom;
+  background: url("/sites/all/themes/unc_charlotte4/img/band-member-85.png") no-repeat right bottom;
   max-width: 1200px;
-  margin: auto; }
+  margin: auto;
+  background: url("/sites/all/themes/unc_charlotte4/img/band-member-92.png") no-repeat right bottom; }
   #block-views-news-block-1 h2.block__title {
     display: none;
     font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
@@ -1384,10 +1395,11 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     text-align: center;
     width: auto;
     top: 0;
-    width: calc(100% - 300px);
     margin: auto;
     background: white;
-    position: relative; }
+    position: relative;
+    width: calc(100% - 300px);
+    width: calc(100% - 350px); }
   #block-views-news-block-1 .view-news {
     position: relative; }
     #block-views-news-block-1 .view-news .view-content {
@@ -1397,14 +1409,16 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
       border-bottom: 5px solid #444;
       padding: 0 20px;
       width: calc(100% - 300px);
-      padding: 0; }
+      padding: 0;
+      width: calc(100% - 350px); }
       #block-views-news-block-1 .view-news .view-content .views-field-title {
         display: block;
         float: left;
         width: 100%;
         margin: 0; }
         #block-views-news-block-1 .view-news .view-content .views-field-title h2 {
-          margin: 15px 0; }
+          margin: 15px 0 5px 0;
+          padding: 10px 0 0 0; }
         #block-views-news-block-1 .view-news .view-content .views-field-title .field-content {
           font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
           font-weight: 400;
@@ -1425,7 +1439,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
         float: left;
         padding-right: 20px;
         position: relative;
-        margin: 20px 0; }
+        margin: 10px 0 30px 0; }
         #block-views-news-block-1 .view-news .view-content .views-field-title-1:after {
           content: '\f04b';
           font-family: FontAwesome;
@@ -1456,8 +1470,12 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
       padding-right: 20px;
       position: relative;
       width: 100%;
+      float: left;
+      width: 70%;
       width: calc(100% - 300px);
-      float: left; }
+      min-width: 355px;
+      margin-bottom: 40px;
+      width: calc(100% - 350px); }
       #block-views-news-block-1 .view-news .more-link:after {
         content: '\f04b';
         font-family: FontAwesome;
@@ -1525,7 +1543,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
             font-family: arial;
             color: #444;
             font-size: 16px;
-            line-height: 22px;
+            line-height: 24px;
             width: 100%;
             margin: 0;
             border: none;
@@ -1545,8 +1563,9 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   display: block;
   float: left;
   width: 100%;
-  padding: 0px 20px 0 10px;
-  width: calc(100% - 300px); }
+  width: calc(100% - 300px);
+  margin-top: -37px;
+  padding: 0px 20px 0 10px; }
   #block-bean-join-pride-of-niner-nation h2.block__title {
     font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
     font-weight: 400;
@@ -1555,19 +1574,19 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     font-size: 32px;
     line-height: 32px;
     display: block !important;
-    background: #fff;
-    text-align: center;
-    margin: auto;
+    float: none;
     width: 60%;
     min-width: 200px;
+    margin: auto;
+    position: relative;
+    top: 16px;
+    background: #fff;
+    text-align: center;
     width: 275px;
     max-width: 100%;
     font-size: 48px;
     line-height: 48px;
-    width: 500px;
-    float: none;
-    position: relative;
-    top: 12px; }
+    width: 500px; }
 
 #block-bean-join-faqs {
   display: block;
@@ -1638,7 +1657,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
               font-family: arial;
               color: #444;
               font-size: 16px;
-              line-height: 22px;
+              line-height: 24px;
               line-height: 22px;
               color: white;
               margin: 0;
@@ -1703,7 +1722,8 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     position: static;
     float: right;
     width: calc(100% - 80px);
-    padding: 0 20px; }
+    padding: 0 20px;
+    width: calc(100% - 150px); }
 
 /* end join band - specific elements */
 /* sights and sounds - specific elements*/
@@ -1725,7 +1745,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
 #block-views-media-block-3 .block__content .view-content {
   border-top: 5px solid #444;
   padding-top: 80px;
-  max-width: 1200px;
+  max-width: 1160px;
   margin: auto; }
   #block-views-media-block-3 .block__content .view-content .views-field-field-video-url {
     display: block;
@@ -1764,7 +1784,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
 /* images */
 #block-views-media-block-1 {
   float: none;
-  max-width: 1200px;
+  max-width: 1160px;
   margin: auto; }
   #block-views-media-block-1 h2.block__title {
     font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
@@ -1873,7 +1893,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   #block-block-17 .block__content {
     border-top: 5px solid #444;
     margin: auto;
-    max-width: 1200px; }
+    max-width: 1160px; }
     #block-block-17 .block__content h2 {
       max-width: 1200px;
       width: 250px;
@@ -1895,7 +1915,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
         display: block;
         float: left;
         width: 100%;
-        width: 33.3333%;
+        width: 33%;
         padding: 0 20px; }
         #block-block-17 .block__content #instafeed .item a {
           position: relative; }
@@ -1960,7 +1980,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
   float: left;
   width: 100%; }
   #block-views-media-block-2 .block__title {
-    max-width: 1200px;
+    max-width: 1160px;
     font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
     font-weight: 400;
     text-transform: uppercase;
@@ -1975,7 +1995,7 @@ html #block-views-basic-page-featured-block .contextual-links-wrapper {
     top: 30px;
     position: relative; }
   #block-views-media-block-2 .block__content {
-    max-width: 1200px;
+    max-width: 1160px;
     margin: auto;
     border-top: 5px solid #444;
     padding-top: 60px; }
@@ -2082,7 +2102,8 @@ html body div.jp-audio {
     max-width: 1200px;
     padding: 0 10px;
     margin: auto;
-    height: auto; }
+    height: auto;
+    padding-left: 0; }
     .l-header-third .container .l-region--header-third #block-menu-block-1 {
       display: block;
       float: left;
@@ -2116,11 +2137,16 @@ html body div.jp-audio {
             text-align: center;
             margin: 0;
             width: auto; }
-            .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li.active-trail, .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li:hover {
+            .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li.active-trail {
               border-bottom: 1px solid #00703c !important; }
-              .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li.active-trail a, .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li:hover a {
+              .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li.active-trail a {
                 color: #444;
                 border-bottom: 5px solid #00703c; }
+            .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li:hover {
+              border-bottom: 1px solid #bea848 !important; }
+              .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li:hover a {
+                color: #444;
+                border-bottom: 5px solid #bea848; }
             .l-header-third .container .l-region--header-third #block-menu-block-1 .menu-block-wrapper ul li a {
               font-family: 'TradeGothicLTStd-BdCn20','Impact W01 2010',Impact, Arial, sans-serif;
               font-weight: 400;
@@ -2203,7 +2229,7 @@ html body div.jp-audio {
     font-family: arial;
     color: #444;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 24px;
     color: #00703c;
     background: #eee;
     border: 1px solid #ccc;
@@ -2316,7 +2342,7 @@ html body div.jp-audio {
     font-family: arial;
     color: #444;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 24px;
     display: block;
     float: left;
     width: 100%;
@@ -2326,7 +2352,7 @@ html body div.jp-audio {
     font-family: arial;
     color: #444;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 24px;
     display: block;
     float: left;
     width: 100%;
@@ -2425,7 +2451,7 @@ html body div.jp-audio {
     font-family: arial;
     color: #444;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 24px;
     line-height: 22px;
     color: #444;
     padding: 0 10px;
@@ -2437,7 +2463,7 @@ html body div.jp-audio {
     font-family: arial;
     color: #444;
     font-size: 16px;
-    line-height: 22px;
+    line-height: 24px;
     line-height: 22px;
     color: #444;
     padding: 0 10px;
@@ -2455,6 +2481,10 @@ html body div.jp-audio {
   padding: 5px;
   width: 50%;
   width: 33.3333%; }
+  .view-id-media.view-display-id-page_2 .views-row .views-field-field-image-upload .field-content a {
+    display: none; }
+  .view-id-media.view-display-id-page_2 .views-row .views-field-field-image-upload .field-content a:first-child {
+    display: block; }
 .view-id-media.view-display-id-page_3 .views-row {
   display: block;
   float: left;
